Fixed Chrome scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,25 @@
     box-sizing: border-box;
   }
 
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    box-shadow: inset 0 0 10px 10px var(--color--tertiary);
+    border: solid 2px transparent;
+    border-radius: 10px;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    box-shadow: inset 0 0 10px 10px var(--color--secondary);
+    border: solid 1.75px transparent;
+  }
+
   html[data-theme="dark"] {
     --color--primary: #161a1d;
     --color--secondary: #454f59;
